Change asserts to runtime checking

In rare cases it is possible to get into situation where m_effect nor
m_effectSource exists at the time update* methods are reached.

Task-number: QTBUG-109506
Change-Id: I74e9a156ae8e313b60243020a8c65b89770c27ce
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
Reviewed-by: Andy Nichols <andy.nichols@qt.io>
(cherry picked from commit ae6546c240bd3beb9295b512996a115bcebb831a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>